[gd_scene load_steps=11 format=3 uid="uid://c54l65vxgegbc"]

[ext_resource type="Script" uid="uid://ordo5ki61n0a" path="res://script/games/level_complete.gd" id="1_1e78d"]
[ext_resource type="FontFile" uid="uid://bvkyxdlc40uyg" path="res://font/TT-Norms-Bold.otf" id="4_m6ebe"]
[ext_resource type="Theme" uid="uid://cdynjfvdtavlt" path="res://scene/main_menu/main_menu_button_theme.tres" id="6_8j562"]
[ext_resource type="Texture2D" uid="uid://cqkwytntfgrv" path="res://asset/back-icon.png" id="6_m6ebe"]
[ext_resource type="Texture2D" uid="uid://box7db6n1q8lx" path="res://asset/next-icon.png" id="7_od6v4"]
[ext_resource type="AudioStream" uid="uid://dxpul16876qad" path="res://audio/victory-chime.mp3" id="8_jv7kj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel_bg"]
draw_center = false
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="Theme" id="Theme_labels"]

[sub_resource type="ButtonGroup" id="ButtonGroup_rfi1m"]

[sub_resource type="ButtonGroup" id="ButtonGroup_efq80"]

[node name="LevelCompletePanel" type="CanvasLayer"]
layer = 20
script = ExtResource("1_1e78d")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackgroundDim" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.03137255, 0.03137255, 0.03137255, 0.87058824)

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -300.0
offset_right = 150.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Panel" type="Panel" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(300, 560)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel_bg")

[node name="PanelContent" type="VBoxContainer" parent="Control/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_labels")
alignment = 1

[node name="VSpacer1" type="Control" parent="Control/VBoxContainer/Panel/PanelContent"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 2

[node name="LevelLabel" type="Label" parent="Control/VBoxContainer/Panel/PanelContent"]
layout_mode = 2
size_flags_vertical = 2
theme = ExtResource("6_8j562")
theme_override_fonts/font = ExtResource("4_m6ebe")
theme_override_font_sizes/font_size = 36
text = "LEVEL 07"
horizontal_alignment = 1

[node name="LevelLabel2" type="Label" parent="Control/VBoxContainer/Panel/PanelContent"]
layout_mode = 2
size_flags_vertical = 2
theme = ExtResource("6_8j562")
text = "CLEARED"
horizontal_alignment = 1

[node name="VSpacer4" type="Control" parent="Control/VBoxContainer/Panel/PanelContent"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
size_flags_vertical = 2

[node name="ScoreValue" type="Label" parent="Control/VBoxContainer/Panel/PanelContent"]
layout_mode = 2
theme = ExtResource("6_8j562")
theme_override_font_sizes/font_size = 60
text = "120"
horizontal_alignment = 1

[node name="BestScoreValue" type="Label" parent="Control/VBoxContainer/Panel/PanelContent"]
layout_mode = 2
size_flags_vertical = 2
theme = ExtResource("6_8j562")
theme_override_colors/font_color = Color(1, 1, 0, 1)
text = "BEST 435"
horizontal_alignment = 1

[node name="ButtonsContainer" type="HBoxContainer" parent="Control/VBoxContainer/Panel/PanelContent"]
layout_mode = 2
size_flags_vertical = 2
alignment = 1

[node name="BackButton" type="Button" parent="Control/VBoxContainer/Panel/PanelContent/ButtonsContainer"]
custom_minimum_size = Vector2(120, 80)
layout_mode = 2
theme = ExtResource("6_8j562")
toggle_mode = true
button_group = SubResource("ButtonGroup_rfi1m")
text = "BACK"
icon = ExtResource("6_m6ebe")
expand_icon = true

[node name="HSpacer" type="Control" parent="Control/VBoxContainer/Panel/PanelContent/ButtonsContainer"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2
size_flags_horizontal = 2

[node name="NextButton" type="Button" parent="Control/VBoxContainer/Panel/PanelContent/ButtonsContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme = ExtResource("6_8j562")
toggle_mode = true
button_group = SubResource("ButtonGroup_efq80")
text = "NEXT"
icon = ExtResource("7_od6v4")
icon_alignment = 2
expand_icon = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Control"]
stream = ExtResource("8_jv7kj")
autoplay = true
